fix: z-index header

--- a/src/styles/_header.css
+++ b/src/styles/_header.css
@@ -5,7 +5,7 @@
 }
 .header-fixed{
   position: fixed;
-  z-index: 2;
+  z-index: 3;
 }
 
 .navbar-brand {
